# serializer version: 1
# name: test_build[tests/homes/camera-example.yaml]
  '''
  ---
  areas:
  - name: Backyard
    id: backyard
  devices:
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: Spotlight Cam Battery
      manufacturer: Ring
      sw_version: 2.4.1
  entities:
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.MOTION
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.OCCUPANCY
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.SOUND
  
  
  '''
# ---
# name: test_build[tests/homes/door-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Sensor
    id: front_door_sensor
    area: front_door
    info:
      manufacturer: Aqara
  entities:
  - name: Front Door Sensor
    id: binary_sensor.front_door_sensor
    area: front_door
    device: front_door_sensor
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.DOOR
  - name: Front Door Sensor Battery
    id: binary_sensor.front_door_sensor_battery
    area: front_door
    device: front_door_sensor
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
  - name: Front Door Sensor Battery
    id: sensor.front_door_sensor_battery
    area: front_door
    device: front_door_sensor
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_build[tests/homes/fan-example.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Counter Fan
    id: counter_fan
    area: kitchen
  entities:
  - name: Counter Fan
    id: fan.counter_fan
    area: kitchen
    device: counter_fan
    state: 'off'
    attributes:
      supported_features:
      - fan.FanEntityFeature.OSCILLATE
      - fan.FanEntityFeature.SET_SPEED
      oscillating: false
  
  
  '''
# ---
# name: test_build[tests/homes/garage-door-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Garage Door
    id: garage_door
    area: front_yard
  entities:
  - name: Garage Door
    id: cover.garage_door
    area: front_yard
    device: garage_door
    state: false
    attributes:
      device_class: cover.CoverDeviceClass.GARAGE
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
  - name: Garage Door
    id: light.garage_door
    area: front_yard
    device: garage_door
    state: false
    attributes:
      supported_color_modes:
      - onoff
      color_mode:
      - onoff
  
  
  '''
# ---
# name: test_build[tests/homes/gate-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Driveway Gate
    id: driveway_gate
    area: front_yard
  entities:
  - name: Driveway Gate
    id: cover.driveway_gate
    area: front_yard
    device: driveway_gate
    state: false
    attributes:
      device_class: cover.CoverDeviceClass.GATE
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
  
  
  '''
# ---
# name: test_build[tests/homes/heat-pump-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: Thermostat
      manufacturer: Nest
      sw_version: 1.0.0
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    attributes:
      unit_of_measurement: "\xB0F"
      hvac_modes:
      - heat
      - 'off'
      supported_features:
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_ON
      - climate.ClimateEntityFeature.TURN_OFF
      hvac_mode: 'off'
      hvac_action: 'off'
      current_temperature: 60
      target_temperature: 60
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    state: '60'
    attributes:
      native_unit_of_measurement: "\xB0C"
      device_class: sensor.SensorDeviceClass.TEMPERATURE
      state_class: sensor.SensorStateClass.MEASUREMENT
  
  
  '''
# ---
# name: test_build[tests/homes/home1.yaml]
  '''
  ---
  areas:
  - name: Living Room
    id: living_room
  - name: Backyard
    id: backyard
  - name: Bedroom 1
    id: bedroom_1
  - name: Kitchen
    id: kitchen
  - name: Bathroom
    id: bathroom
  devices:
  - name: Fireplace Light
    id: fireplace_light
    area: living_room
    info:
      model: Smart LED Bulb
      manufacturer: Philips
      sw_version: 1.2.3
  - name: Thermostat
    id: thermostat
    area: living_room
    info:
      model: Ecobee4 Smart Thermostat
      manufacturer: Ecobee
      sw_version: 4.0.0
  - name: Outdoor Camera
    id: outdoor_camera
    area: backyard
    info:
      model: Spotlight Cam Battery
      manufacturer: Ring
      sw_version: 2.4.1
  - name: Bedroom 1 Light
    id: bedroom_1_light
    area: bedroom_1
    info:
      model: Smart LED Bulb
      manufacturer: Philips
      sw_version: 1.2.3
  - name: Kitchen Light
    id: kitchen_light
    area: kitchen
    info:
      manufacturer: Philips
      sw_version: 2.47.8
  - name: Coffee Maker
    id: coffee_maker
    area: kitchen
    info:
      model: S31 Lite zb
      manufacturer: SONOFF
      sw_version: 2.3.3.140
  - name: Bathroom Light
    id: bathroom_light
    area: bathroom
    info:
      model: Smart LED Bulb
      manufacturer: Philips
      sw_version: 1.2.3
  entities:
  - name: Fireplace Light
    id: light.fireplace_light
    area: living_room
    device: fireplace_light
    attributes:
      supported_color_modes:
      - brightness
      color_mode: brightness
      brightness: 100
  - name: Thermostat
    id: climate.thermostat
    area: living_room
    device: thermostat
    attributes:
      unit_of_measurement: "\xB0C"
      supported_features:
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_ON
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      hvac_mode: 'off'
      hvac_action: 'off'
      current_temperature: 22
      target_temperature: 22
  - name: Thermostat Temperature
    id: sensor.thermostat_temperature
    area: living_room
    device: thermostat
    attributes:
      native_unit_of_measurement: "\xB0C"
      device_class: sensor.SensorDeviceClass.TEMPERATURE
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_value: 22
  - name: Thermostat Humidity
    id: sensor.thermostat_humidity
    area: living_room
    device: thermostat
    attributes:
      native_unit_of_measurement: '%'
      device_class: sensor.SensorDeviceClass.HUMIDITY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_value: 45
  - name: Outdoor Camera Motion
    id: binary_sensor.outdoor_camera_motion
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.MOTION
  - name: Outdoor Camera Person
    id: binary_sensor.outdoor_camera_person
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.OCCUPANCY
  - name: Outdoor Camera Sound
    id: binary_sensor.outdoor_camera_sound
    area: backyard
    device: outdoor_camera
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.SOUND
  - name: Bedroom 1 Light
    id: light.bedroom_1_light
    area: bedroom_1
    device: bedroom_1_light
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      color_mode: onoff
  - name: Kitchen Light
    id: light.kitchen_light
    area: kitchen
    device: kitchen_light
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      color_mode: onoff
  - name: Coffee Maker Energy
    id: sensor.coffee_maker_energy
    area: kitchen
    device: coffee_maker
    state: '1'
    attributes:
      device_class: sensor.SensorDeviceClass.ENERGY
      state_class: sensor.SensorStateClass.TOTAL_INCREASING
      native_unit_of_measurement: kWh
  - name: Coffee Maker
    id: switch.coffee_maker
    area: kitchen
    device: coffee_maker
    state: true
    attributes:
      device_class: switch.SwitchDeviceClass.OUTLET
  - name: Bathroom Light
    id: light.bathroom_light
    area: bathroom
    device: bathroom_light
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      color_mode: onoff
  
  
  '''
# ---
# name: test_build[tests/homes/hvac-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
    info:
      model: Thermostat
      manufacturer: Nest
      sw_version: 1.0.0
  entities:
  - name: Family Room
    id: climate.family_room
    area: family_room
    device: family_room
    attributes:
      unit_of_measurement: "\xB0F"
      supported_features:
      - climate.ClimateEntityFeature.FAN_MODE
      - climate.ClimateEntityFeature.TURN_ON
      - climate.ClimateEntityFeature.TURN_OFF
      - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
      hvac_modes:
      - 'off'
      - cool
      - heat
      - auto
      hvac_mode: 'off'
      hvac_action: 'off'
      current_temperature: 62
      target_temperature: 22
  - name: Family Room Temperature
    id: sensor.family_room_temperature
    area: family_room
    device: family_room
    attributes:
      native_unit_of_measurement: "\xB0F"
      device_class: sensor.SensorDeviceClass.TEMPERATURE
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_value: 62
  - name: Family Room Humidity
    id: sensor.family_room_humidity
    area: family_room
    device: family_room
    attributes:
      native_unit_of_measurement: '%'
      device_class: sensor.SensorDeviceClass.HUMIDITY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_value: 45
  
  
  '''
# ---
# name: test_build[tests/homes/light-dimmable.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    attributes:
      supported_color_modes:
      - brightness
      color_mode: brightness
      brightness: 30
  
  
  '''
# ---
# name: test_build[tests/homes/light-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    state: 'off'
    attributes:
      supported_color_modes:
      - onoff
      color_mode: onoff
  
  
  '''
# ---
# name: test_build[tests/homes/light-rgbw.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Family Room
    id: family_room
    area: family_room
  entities:
  - name: Family Room
    id: light.family_room
    area: family_room
    device: family_room
    attributes:
      supported_color_modes:
      - rgbw
      color_mode: rgbw
      rgbw_color:
      - 255
      - 255
      - 0
      - 255
  
  
  '''
# ---
# name: test_build[tests/homes/motion-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Front Yard
    id: front_yard
  devices:
  - name: Front Yard Motion
    id: front_yard_motion
    area: front_yard
  entities:
  - name: Front Yard Motion
    id: binary_sensor.front_yard_motion
    area: front_yard
    device: front_yard_motion
    state: true
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.MOTION
  - name: Front Yard Motion Battery
    id: binary_sensor.front_yard_motion_battery
    area: front_yard
    device: front_yard_motion
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
  - name: Front Yard Motion Battery
    id: sensor.front_yard_motion_battery
    area: front_yard
    device: front_yard_motion
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_build[tests/homes/smart-blinds-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Shade
    id: left_shade
    area: family_room
  - name: Right Shade
    id: right_shade
    area: family_room
  entities:
  - name: Left Shade
    id: cover.left_shade
    area: family_room
    device: left_shade
    state: false
    attributes:
      device_class: cover.CoverDeviceClass.BLIND
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Left Shade Battery
    id: sensor.left_shade_battery
    area: family_room
    device: left_shade
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  - name: Right Shade
    id: cover.right_shade
    area: family_room
    device: right_shade
    state: false
    attributes:
      device_class: cover.CoverDeviceClass.BLIND
      supported_features:
      - cover.CoverEntityFeature.OPEN
      - cover.CoverEntityFeature.CLOSE
      - cover.CoverEntityFeature.SET_POSITION
  - name: Right Shade Battery
    id: sensor.right_shade_battery
    area: family_room
    device: right_shade
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_build[tests/homes/smart-lock-example.yaml]
  '''
  ---
  areas:
  - name: Front door
    id: front_door
  devices:
  - name: Front Door Lock
    id: front_door_lock
    area: front_door
    info:
      manufacturer: Yale
  entities:
  - name: Front Door Lock
    id: lock.front_door_lock
    area: front_door
    device: front_door_lock
    state: locked
  - name: Front Door Lock
    id: binary_sensor.front_door_lock
    area: front_door
    device: front_door_lock
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.LOCK
  - name: Front Door Lock Tamper
    id: binary_sensor.front_door_lock_tamper
    area: front_door
    device: front_door_lock
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.TAMPER
  - name: Front Door Lock Battery
    id: binary_sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
  - name: Front Door Lock Battery
    id: sensor.front_door_lock_battery
    area: front_door
    device: front_door_lock
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_build[tests/homes/smart-plug-example.yaml]
  '''
  ---
  areas:
  - name: Family room
    id: family_room
  devices:
  - name: Floor Lamp
    id: floor_lamp
    area: family_room
    info:
      manufacturer: Wyze
  entities:
  - name: Floor Lamp Energy
    id: sensor.floor_lamp_energy
    area: family_room
    device: floor_lamp
    state: '1'
    attributes:
      device_class: sensor.SensorDeviceClass.ENERGY
      state_class: sensor.SensorStateClass.TOTAL_INCREASING
      native_unit_of_measurement: kWh
  - name: Floor Lamp
    id: switch.floor_lamp
    area: family_room
    device: floor_lamp
    state: true
    attributes:
      device_class: switch.SwitchDeviceClass.OUTLET
  
  
  '''
# ---
# name: test_build[tests/homes/smart-speaker-example.yaml]
  '''
  ---
  areas:
  - name: Living Room
    id: living_room
  devices:
  - name: Smart Speaker
    id: smart_speaker
    area: living_room
    info:
      model: Echo Dot (4th Gen)
      manufacturer: Amazon
      sw_version: 4.5.1
  entities:
  - name: Smart Speaker
    id: media_player.smart_speaker
    area: living_room
    device: smart_speaker
    state: playing
    attributes:
      device_class: media_player.MediaPlayerDeviceClass.SPEAKER
      supported_features:
      - media_player.MediaPlayerEntityFeature.PLAY
      - media_player.MediaPlayerEntityFeature.PAUSE
      - media_player.MediaPlayerEntityFeature.STOP
      - media_player.MediaPlayerEntityFeature.VOLUME_STEP
      - media_player.MediaPlayerEntityFeature.VOLUME_MUTE
      - media_player.MediaPlayerEntityFeature.VOLUME_SET
      - media_player.MediaPlayerEntityFeature.TURN_ON
      - media_player.MediaPlayerEntityFeature.TURN_OFF
      - media_player.MediaPlayerEntityFeature.NEXT_TRACK
      - media_player.MediaPlayerEntityFeature.PREVIOUS_TRACK
  
  
  '''
# ---
# name: test_build[tests/homes/switch-example.yaml]
  '''
  ---
  areas:
  - name: Chicken Coop
    id: chicken_coop
  devices:
  - name: Smart Feeder
    id: smart_feeder
    area: chicken_coop
  entities:
  - name: Smart Feeder
    id: switch.smart_feeder
    area: chicken_coop
    device: smart_feeder
    state: true
    attributes:
      device_class: switch.SwitchDeviceClass.SWITCH
  
  
  '''
# ---
# name: test_build[tests/homes/todo-list-example.yaml]
  '''
  ---
  areas: []
  devices:
  - name: Tasks
    id: tasks
  entities:
  - name: Tasks
    id: todo.tasks
    device: tasks
    attributes:
      supported_features:
      - todo.TodoListEntityFeature.CREATE_TODO_ITEM
      - todo.TodoListEntityFeature.DELETE_TODO_ITEM
      todo_items: []
  
  
  '''
# ---
# name: test_build[tests/homes/vacuum-example.yaml]
  '''
  ---
  areas:
  - name: Kitchen
    id: kitchen
  devices:
  - name: Robot Vacuum
    id: robot_vacuum
    area: kitchen
  entities:
  - name: Robot Vacuum
    id: vacuum.robot_vacuum
    area: kitchen
    device: robot_vacuum
    state: docked
    attributes:
      supported_features:
      - vacuum.VacuumEntityFeature.START
      - vacuum.VacuumEntityFeature.STOP
      - vacuum.VacuumEntityFeature.STATE
      - vacuum.VacuumEntityFeature.PAUSE
      - vacuum.VacuumEntityFeature.RETURN_HOME
  
  
  '''
# ---
# name: test_build[tests/homes/valve-example.yaml]
  '''
  ---
  areas:
  - name: Garden
    id: garden
  devices:
  - name: Back Yard Water Valve
    id: back_yard_water_valve
    area: garden
  entities:
  - name: Back Yard Water Valve
    id: valve.back_yard_water_valve
    area: garden
    device: back_yard_water_valve
    attributes:
      reports_position: true
      supported_features:
      - valve.ValveEntityFeature.OPEN
      - valve.ValveEntityFeature.CLOSE
      - valve.ValveEntityFeature.SET_POSITION
      current_valve_position: 0
  - name: Back Yard Water Valve Meter-reading
    id: sensor.back_yard_water_valve_meter_reading
    area: garden
    device: back_yard_water_valve
    state: '2000'
    attributes:
      native_unit_of_measurement: "m\xB3"
      device_class: sensor.SensorDeviceClass.WATER
      state_class: sensor.SensorStateClass.TOTAL_INCREASING
  - name: Back Yard Water Valve Battery
    id: sensor.back_yard_water_valve_battery
    area: garden
    device: back_yard_water_valve
    state: '75'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_build[tests/homes/weather-example.yaml]
  '''
  ---
  areas: []
  devices:
  - name: Home
    id: home
    info:
      manufacturer: AccuWeather
  entities:
  - name: Home
    id: weather.home
    device: home
    attributes:
      native_temperature_unit: "\xB0F"
      native_wind_speed_unit: mph
      condition: sunny
      native_temperature: 72
      humidity: 60
      native_wind_speed: 5
      daily_forecast:
      - cloudy
      - rainy
      hourly_forecast:
      - fair
      - fair
      - cloudy
      - cloudy
      twice_daily_forecast:
      - fair
      - cloudy
      - rainy
      - cloudy
  
  
  '''
# ---
# name: test_build[tests/homes/window-sensor-example.yaml]
  '''
  ---
  areas:
  - name: Family Room
    id: family_room
  devices:
  - name: Left Window Sensor
    id: left_window_sensor
    area: family_room
    info:
      manufacturer: Aqara
  entities:
  - name: Left Window Sensor
    id: binary_sensor.left_window_sensor
    area: family_room
    device: left_window_sensor
    state: false
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.WINDOW
  - name: Left Window Sensor Battery
    id: binary_sensor.left_window_sensor_battery
    area: family_room
    device: left_window_sensor
    attributes:
      device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
  - name: Left Window Sensor Battery
    id: sensor.left_window_sensor_battery
    area: family_room
    device: left_window_sensor
    state: '90'
    attributes:
      device_class: sensor.SensorDeviceClass.BATTERY
      state_class: sensor.SensorStateClass.MEASUREMENT
      native_unit_of_measurement: '%'
  
  
  '''
# ---
# name: test_list_device_types
  '''
  camera:
    device_type: camera
    desc: A video camera that supports motion detection and other events.
    device_states:
    - name: idle
      entity_states:
      - domain: binary_sensor
        key: motion
        state: false
      - domain: binary_sensor
        key: person
        state: false
      - domain: binary_sensor
        key: sound
        state: false
    - name: motion-detected
      entity_states:
      - domain: binary_sensor
        key: motion
        state: true
    - name: person-detected
      entity_states:
      - domain: binary_sensor
        key: person
        state: true
    - name: sound-detected
      entity_states:
      - domain: binary_sensor
        key: sound
        state: true
    entities:
      binary_sensor:
      - key: motion
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.MOTION
      - key: person
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.OCCUPANCY
      - key: sound
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.SOUND
  hvac:
    device_type: hvac
    desc: A climate device that supports HVAC Cool and Heat modes.
    device_states:
    - name: 'off'
      entity_states:
      - domain: climate
        key: hvac
        state:
          hvac_mode: 'off'
          hvac_action: 'off'
          current_temperature: 22
          target_temperature: 22
      - domain: sensor
        key: temperature
        state:
          native_value: 22
      - domain: sensor
        key: humidity
        state:
          native_value: 45
    - name: cooling
      entity_states:
      - domain: climate
        key: hvac
        state:
          hvac_mode: cool
          hvac_action: cooling
          current_temperature: 25
          target_temperature: 23
      - domain: sensor
        key: temperature
        state:
          native_value: 25
      - domain: sensor
        key: humidity
        state:
          native_value: 45
    - name: very-low
      entity_states:
      - domain: climate
        key: hvac
        state:
          hvac_mode: cool
          hvac_action: cooling
          current_temperature: 25
          target_temperature: 12
      - domain: sensor
        key: temperature
        state:
          native_value: 25
      - domain: sensor
        key: humidity
        state:
          native_value: 45
    entities:
      climate:
      - key: hvac
        attributes:
          unit_of_measurement: "\xB0C"
          supported_features:
          - climate.ClimateEntityFeature.FAN_MODE
          - climate.ClimateEntityFeature.TURN_ON
          - climate.ClimateEntityFeature.TURN_OFF
          - climate.ClimateEntityFeature.TARGET_TEMPERATURE_RANGE
          hvac_modes:
          - 'off'
          - cool
          - heat
          - auto
      sensor:
      - key: temperature
        attributes:
          native_unit_of_measurement: "\xB0C"
          device_class: sensor.SensorDeviceClass.TEMPERATURE
          state_class: sensor.SensorStateClass.MEASUREMENT
      - key: humidity
        attributes:
          native_unit_of_measurement: '%'
          device_class: sensor.SensorDeviceClass.HUMIDITY
          state_class: sensor.SensorStateClass.MEASUREMENT
  switch:
    device_type: switch
    desc: A generic switch.
    device_states:
    - name: 'on'
      entity_states:
      - domain: switch
        key: switch
        state: true
    - name: 'off'
      entity_states:
      - domain: switch
        key: switch
        state: false
    entities:
      switch:
      - key: switch
        attributes:
          device_class: switch.SwitchDeviceClass.SWITCH
  weather-service:
    device_type: weather-service
    desc: A service that provides weather related integrations.
    device_states:
    - name: fair
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: sunny
          native_temperature: 72
          humidity: 60
          native_wind_speed: 5
    - name: cloudy
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: cloudy
          native_temperature: 60
          humidity: 70
          native_wind_speed: 10
    - name: rainy
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: rainy
          native_temperature: 50
          humidity: 80
          native_wind_speed: 15
    - name: snowy
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: snowy
          native_temperature: 32
          humidity: 90
          native_wind_speed: 20
    - name: windy
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: windy
          native_temperature: 65
          humidity: 50
          native_wind_speed: 30
    - name: hot
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: sunny
          native_temperature: 90
          humidity: 40
          native_wind_speed: 10
    - name: cold
      entity_states:
      - domain: weather
        key: weather
        state:
          condition: partlycloudy
          native_temperature: 20
          humidity: 60
          native_wind_speed: 5
    entities:
      weather:
      - key: weather
        attributes:
          native_temperature_unit: "\xB0F"
          native_wind_speed_unit: mph
  lock-sensor:
    device_type: lock-sensor
    desc: A smart lock device that can be remotely monitored only, but does not support
      remote control.
    device_states:
    - name: locked
      entity_states:
      - domain: binary_sensor
        key: lock
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: unlocked
      entity_states:
      - domain: binary_sensor
        key: lock
        state: true
      - domain: sensor
        key: battery
        state: 90
    entities:
      binary_sensor:
      - key: lock
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.LOCK
      - key: tamper
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.TAMPER
      - key: battery
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  exhaust-fan:
    device_type: exhaust-fan
    desc: A mechanical ventilation device which that draws out stale or humid air to
      improve air quality.
    device_states:
    - name: 'off'
      entity_states:
      - domain: fan
        key: exhaust_fan
        state:
          state: 'off'
      - domain: sensor
        key: humidity
        state: 45
    - name: 'on'
      entity_states:
      - domain: fan
        key: exhaust_fan
        state:
          state: 'on'
      - domain: sensor
        key: humidity
        state: 45
    - name: humid
      entity_states:
      - domain: sensor
        key: humidity
        state: 85
    entities:
      fan:
      - key: exhaust_fan
        attributes: {}
      sensor:
      - key: humidity
        attributes:
          native_unit_of_measurement: '%'
          device_class: sensor.SensorDeviceClass.HUMIDITY
          state_class: sensor.SensorStateClass.MEASUREMENT
  smart-lock:
    device_type: smart-lock
    desc: A smart lock device that can be remotely controlled.
    device_states:
    - name: locked
      entity_states:
      - domain: lock
        key: lock
        state: locked
      - domain: binary_sensor
        key: lock
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: unlocked
      entity_states:
      - domain: lock
        key: lock
        state: unlocked
      - domain: binary_sensor
        key: lock
        state: true
      - domain: sensor
        key: battery
        state: 90
    entities:
      lock:
      - key: lock
        attributes: {}
      binary_sensor:
      - key: lock
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.LOCK
      - key: tamper
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.TAMPER
      - key: battery
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  gate:
    device_type: gate
    desc: An movable barrier that can be monitored and opened and closed remotely.
    device_states:
    - name: closed
      entity_states:
      - domain: cover
        key: gate
        state: false
    - name: open
      entity_states:
      - domain: cover
        key: gate
        state: true
    entities:
      cover:
      - key: gate
        attributes:
          device_class: cover.CoverDeviceClass.GATE
          supported_features:
          - cover.CoverEntityFeature.OPEN
          - cover.CoverEntityFeature.CLOSE
  light-rgbw:
    device_type: light-rgbw
    desc: A light with rgbw color support.
    device_states:
    - name: 'off'
      entity_states:
      - domain: light
        key: light-rgbw
        state:
          rgbw_color:
          - 0
          - 0
          - 0
          - 0
    - name: white
      entity_states:
      - domain: light
        key: light-rgbw
        state:
          rgbw_color:
          - 0
          - 0
          - 0
          - 255
    - name: red
      entity_states:
      - domain: light
        key: light-rgbw
        state:
          rgbw_color:
          - 255
          - 0
          - 0
          - 0
    entities:
      light:
      - key: light-rgbw
        attributes:
          supported_color_modes:
          - rgbw
          color_mode: rgbw
  fan-oscilating:
    device_type: fan-oscilating
    desc: A fan that supports speed and oscillation control.
    device_states:
    - name: 'off'
      entity_states:
      - domain: fan
        key: osciliating_fan
        state:
          state: 'off'
          oscillating: false
    - name: 'on'
      entity_states:
      - domain: fan
        key: osciliating_fan
        state:
          state: 'on'
          oscillating: false
    - name: oscillating
      entity_states:
      - domain: fan
        key: osciliating_fan
        state:
          state: 'on'
          oscillating: true
    entities:
      fan:
      - key: osciliating_fan
        attributes:
          supported_features:
          - fan.FanEntityFeature.OSCILLATE
          - fan.FanEntityFeature.SET_SPEED
  smart-tv:
    device_type: smart-tv
    desc: A smart television integrated into the smart home.
    device_states:
    - name: playing
      entity_states:
      - domain: media_player
        key: speaker
        state: playing
    - name: 'off'
      entity_states:
      - domain: media_player
        key: speaker
        state: 'off'
    - name: paused
      entity_states:
      - domain: media_player
        key: speaker
        state: paused
    entities:
      media_player:
      - key: speaker
        attributes:
          device_class: media_player.MediaPlayerDeviceClass.TV
          supported_features:
          - media_player.MediaPlayerEntityFeature.PAUSE
          - media_player.MediaPlayerEntityFeature.VOLUME_STEP
          - media_player.MediaPlayerEntityFeature.VOLUME_MUTE
          - media_player.MediaPlayerEntityFeature.VOLUME_SET
          - media_player.MediaPlayerEntityFeature.TURN_ON
          - media_player.MediaPlayerEntityFeature.TURN_OFF
  smart-speaker:
    device_type: smart-speaker
    desc: A music speaker that can be controlled remotely.
    device_states:
    - name: playing
      entity_states:
      - domain: media_player
        key: speaker
        state: playing
    - name: 'off'
      entity_states:
      - domain: media_player
        key: speaker
        state: 'off'
    - name: paused
      entity_states:
      - domain: media_player
        key: speaker
        state: paused
    entities:
      media_player:
      - key: speaker
        attributes:
          device_class: media_player.MediaPlayerDeviceClass.SPEAKER
          supported_features:
          - media_player.MediaPlayerEntityFeature.PLAY
          - media_player.MediaPlayerEntityFeature.PAUSE
          - media_player.MediaPlayerEntityFeature.STOP
          - media_player.MediaPlayerEntityFeature.VOLUME_STEP
          - media_player.MediaPlayerEntityFeature.VOLUME_MUTE
          - media_player.MediaPlayerEntityFeature.VOLUME_SET
          - media_player.MediaPlayerEntityFeature.TURN_ON
          - media_player.MediaPlayerEntityFeature.TURN_OFF
          - media_player.MediaPlayerEntityFeature.NEXT_TRACK
          - media_player.MediaPlayerEntityFeature.PREVIOUS_TRACK
  todo-list:
    device_type: todo-list
    desc: A To-do list contains To-do items which are ordered and have a status (complete
      or in progress).
    device_states:
    - name: empty
      entity_states:
      - domain: todo
        key: todo-list
        state:
          todo_items: []
    entities:
      todo:
      - key: todo-list
        attributes:
          supported_features:
          - todo.TodoListEntityFeature.CREATE_TODO_ITEM
          - todo.TodoListEntityFeature.DELETE_TODO_ITEM
  door-sensor:
    device_type: door-sensor
    desc: A device attached to a door that can detect if it is opened or closed.
    device_states:
    - name: closed
      entity_states:
      - domain: binary_sensor
        key: door
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: open
      entity_states:
      - domain: binary_sensor
        key: door
        state: true
      - domain: sensor
        key: battery
        state: 90
    - name: battery-low
      entity_states:
      - domain: binary_sensor
        key: door
        state: false
      - domain: binary_sensor
        key: battery
        state: true
      - domain: sensor
        key: battery
        state: 10
    entities:
      binary_sensor:
      - key: door
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.DOOR
      - key: battery
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  garage-door:
    device_type: garage-door
    desc: A a garage door that can be controlled remotely.
    device_states:
    - name: closed
      entity_states:
      - domain: cover
        key: garage-door
        state: false
      - domain: light
        key: light
        state: false
    - name: open
      entity_states:
      - domain: cover
        key: garage-door
        state: true
      - domain: light
        key: light
        state: true
    entities:
      cover:
      - key: garage-door
        attributes:
          device_class: cover.CoverDeviceClass.GARAGE
          supported_features:
          - cover.CoverEntityFeature.OPEN
          - cover.CoverEntityFeature.CLOSE
      light:
      - key: light
        attributes:
          supported_color_modes:
          - onoff
          color_mode:
          - onoff
  smart-sprinkler:
    device_type: smart-sprinkler
    desc: A remote controlled sprinkler irrigation system.
    device_states:
    - name: closed
      entity_states:
      - domain: valve
        key: sprinkler
        state: closed
    - name: open
      entity_states:
      - domain: valve
        key: sprinkler
        state: open
    entities:
      valve:
      - key: sprinkler
        attributes:
          supported_features:
          - valve.ValveEntityFeature.OPEN
          - valve.ValveEntityFeature.CLOSE
  sensor:
    device_type: sensor
    desc: A generic sensor that is taking measurements of some value
    device_states:
    - name: zero
      entity_states:
      - domain: sensor
        key: generic
        state:
          native_value: 0
    entities:
      sensor:
      - key: generic
        attributes:
          state_class: sensor.SensorStateClass.MEASUREMENT
  light-dimmable:
    device_type: light-dimmable
    desc: A light that has adjustable brightness.
    device_states:
    - name: 'on'
      entity_states:
      - domain: light
        key: light-dimmable
        state:
          brightness: 100
    - name: 'off'
      entity_states:
      - domain: light
        key: light-dimmable
        state:
          brightness: 0
    - name: dim
      entity_states:
      - domain: light
        key: light-dimmable
        state:
          brightness: 5
    entities:
      light:
      - key: light-dimmable
        attributes:
          supported_color_modes:
          - brightness
          color_mode: brightness
  water-valve:
    device_type: water-valve
    desc: A water shutoff and flow measurement device.
    device_states:
    - name: closed
      entity_states:
      - domain: valve
        key: water-valve
        state:
          current_valve_position: 0
      - domain: sensor
        key: meter-reading
        state: 2000
      - domain: sensor
        key: battery
        state: 75
    - name: open
      entity_states:
      - domain: valve
        key: water-valve
        state:
          current_valve_position: 100
      - domain: sensor
        key: meter-reading
        state: 2001
      - domain: sensor
        key: battery
        state: 75
    entities:
      valve:
      - key: water-valve
        attributes:
          reports_position: true
          supported_features:
          - valve.ValveEntityFeature.OPEN
          - valve.ValveEntityFeature.CLOSE
          - valve.ValveEntityFeature.SET_POSITION
      sensor:
      - key: meter-reading
        attributes:
          native_unit_of_measurement: "m\xB3"
          device_class: sensor.SensorDeviceClass.WATER
          state_class: sensor.SensorStateClass.TOTAL_INCREASING
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  smart-blinds:
    device_type: smart-blinds
    desc: A remotely controllable set of window blinds.
    device_states:
    - name: closed
      entity_states:
      - domain: cover
        key: blind
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: open
      entity_states:
      - domain: cover
        key: blind
        state: true
      - domain: sensor
        key: battery
        state: 90
    entities:
      cover:
      - key: blind
        attributes:
          device_class: cover.CoverDeviceClass.BLIND
          supported_features:
          - cover.CoverEntityFeature.OPEN
          - cover.CoverEntityFeature.CLOSE
          - cover.CoverEntityFeature.SET_POSITION
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  smart-plug:
    device_type: smart-plug
    desc: A smart plug allows remote on/off of electrical devices.
    device_states:
    - name: 'on'
      entity_states:
      - domain: switch
        key: outlet
        state: true
      - domain: sensor
        key: energy
        state: 1
    - name: 'off'
      entity_states:
      - domain: switch
        key: outlet
        state: false
      - domain: sensor
        key: energy
        state: 0
    entities:
      sensor:
      - key: energy
        attributes:
          device_class: sensor.SensorDeviceClass.ENERGY
          state_class: sensor.SensorStateClass.TOTAL_INCREASING
          native_unit_of_measurement: kWh
      switch:
      - key: outlet
        attributes:
          device_class: switch.SwitchDeviceClass.OUTLET
  temperature-sensor:
    device_type: temperature-sensor
    desc: A device that measures the current temperature and humidity.
    device_states:
    - name: mild
      entity_states:
      - domain: sensor
        key: temperature
        state: 70
      - domain: sensor
        key: humidity
        state: 45
    - name: hot
      entity_states:
      - domain: sensor
        key: temperature
        state: 90
      - domain: sensor
        key: humidity
        state: 35
    - name: cold
      entity_states:
      - domain: sensor
        key: temperature
        state: 38
      - domain: sensor
        key: humidity
        state: 60
    entities:
      sensor:
      - key: temperature
        attributes:
          native_unit_of_measurement: "\xB0C"
          device_class: sensor.SensorDeviceClass.TEMPERATURE
          state_class: sensor.SensorStateClass.MEASUREMENT
      - key: humidity
        attributes:
          native_unit_of_measurement: '%'
          device_class: sensor.SensorDeviceClass.HUMIDITY
          state_class: sensor.SensorStateClass.MEASUREMENT
  motion-sensor:
    device_type: motion-sensor
    desc: A device that detects motion of a person or object.
    device_states:
    - name: 'on'
      entity_states:
      - domain: binary_sensor
        key: motion
        state: true
      - domain: sensor
        key: battery
        state: 90
    - name: 'off'
      entity_states:
      - domain: binary_sensor
        key: motion
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: battery-low
      entity_states:
      - domain: binary_sensor
        key: motion
        state: false
      - domain: binary_sensor
        key: battery
        state: true
      - domain: sensor
        key: battery
        state: 15
    entities:
      binary_sensor:
      - key: motion
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.MOTION
      - key: battery
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  window-sensor:
    device_type: window-sensor
    desc: A device attached to a window that can detect if it is opened or closed.
    device_states:
    - name: closed
      entity_states:
      - domain: binary_sensor
        key: window
        state: false
      - domain: sensor
        key: battery
        state: 90
    - name: open
      entity_states:
      - domain: binary_sensor
        key: window
        state: true
      - domain: sensor
        key: battery
        state: 90
    - name: battery-low
      entity_states:
      - domain: binary_sensor
        key: window
        state: false
      - domain: binary_sensor
        key: battery
        state: true
      - domain: sensor
        key: battery
        state: 10
    entities:
      binary_sensor:
      - key: window
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.WINDOW
      - key: battery
        attributes:
          device_class: binary_sensor.BinarySensorDeviceClass.BATTERY
      sensor:
      - key: battery
        attributes:
          device_class: sensor.SensorDeviceClass.BATTERY
          state_class: sensor.SensorStateClass.MEASUREMENT
          native_unit_of_measurement: '%'
  vacuum:
    device_type: vacuum
    desc: A robot vacuum that can be remotely controlled.
    device_states:
    - name: 'off'
      entity_states:
      - domain: vacuum
        key: vacuum
        state: docked
    - name: cleaning
      entity_states:
      - domain: vacuum
        key: vacuum
        state: cleaning
    - name: paused
      entity_states:
      - domain: vacuum
        key: vacuum
        state: paused
    - name: returning
      entity_states:
      - domain: vacuum
        key: vacuum
        state: returning
    entities:
      vacuum:
      - key: vacuum
        attributes:
          supported_features:
          - vacuum.VacuumEntityFeature.START
          - vacuum.VacuumEntityFeature.STOP
          - vacuum.VacuumEntityFeature.STATE
          - vacuum.VacuumEntityFeature.PAUSE
          - vacuum.VacuumEntityFeature.RETURN_HOME
  heat-pump:
    device_type: heat-pump
    desc: A climate device that only supports heating.
    device_states:
    - name: 'off'
      entity_states:
      - domain: climate
        key: heat-pump
        state:
          hvac_mode: 'off'
          hvac_action: 'off'
          current_temperature: 22
          target_temperature: 22
      - domain: sensor
        key: temperature
        state: 22
    - name: heating
      entity_states:
      - domain: climate
        key: heat-pump
        state:
          hvac_mode: heat
          hvac_action: heating
          current_temperature: 25
          target_temperature: 27
      - domain: sensor
        key: temperature
        state: 25
    entities:
      climate:
      - key: heat-pump
        attributes:
          unit_of_measurement: "\xB0C"
          hvac_modes:
          - heat
          - 'off'
          supported_features:
          - climate.ClimateEntityFeature.FAN_MODE
          - climate.ClimateEntityFeature.TURN_ON
          - climate.ClimateEntityFeature.TURN_OFF
      sensor:
      - key: temperature
        attributes:
          native_unit_of_measurement: "\xB0C"
          device_class: sensor.SensorDeviceClass.TEMPERATURE
          state_class: sensor.SensorStateClass.MEASUREMENT
  light:
    device_type: light
    desc: A generic light that can be turned on/off.
    device_states:
    - name: 'off'
      entity_states:
      - domain: light
        key: light
        state: 'off'
    - name: 'on'
      entity_states:
      - domain: light
        key: light
        state: 'on'
    entities:
      light:
      - key: light
        attributes:
          supported_color_modes:
          - onoff
          color_mode: onoff
  
  
  '''
# ---
